# printer_firmware_simulator

./: CMakeLists.txt  README.md
.github/workflows/: main.yml  master.yml
tests/: test_printer.cpp
